BUG: fix for game page height on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     font-family: "Nunito Sans", sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,6 +134,7 @@ button {
 
 #coins {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
